# AFP

./: .7.1.hs.swp  .gitignore  2.5.hs  7.1.hs  A8_1.hs  README.md  profiling.hs
Set1/: A2_5.hs  A7_1.hs  A8_1.hs  A9_1.txt  BeimersBrinke.cabal  MattiasBeimersChielTenBrinke.cabal  Profiling.hs  README.md  profiling  profiling.aux  profiling.hp  profiling.hs  profiling.prof  profiling_smoothPerms'.ps  profiling_smoothPerms.ps
Set2/: A2_7.hs  A2_9.hs  A3.hs  A4_1.hs  A4_2.hs  BeimersBrinke.cabal  README.md  bonus_questions.txt
Set3/: A4_3.hs  A5_2.txt  A5_3.hs  A6_1.hs  A6_1_proof.txt  A8_3.hs  A8_4.hs  A8_5.hs  BeimersBrinke.cabal  README.md
Set4/: A11_1.hs  A11_2.hs  BeimersBrinke.cabal  Client.hs  README.md  Server.hs  generic deriving show.hs  generic_deriving_show.hs
Set4/A10_3/: client.hs  server.hs
Set4/generic-deriving-1.6.2/examples/: Examples.hs
Set4/generic-deriving-1.6.2/src/Generics/: Deriving.hs
Set4/generic-deriving-1.6.2/src/Generics/Deriving/: Base.hs  Copoint.hs  Instances.hs  Traversable.hs  Uniplate.hs
