Name:               BeimersBrinke
Version:            1.0
Cabal-Version:      >= 1.2
Author:             Chiel ten Brinke and Mattias Beimers
License:            GPL
License-file:       LICENSE
Category:           Educational Assignment
Description:        This is the first set of assignments
Build-Type:         Simple
data-files:         README.md,
                    profiling_smoothPerms.ps,
                    profiling_smoothPerms'.ps

Library
  Build-Depends:    base,
                    criterion,
                    QuickCheck
  Exposed-modules:  A2_5,
                    A7_1,
                    A8_1,
                    Profiling

